tests/ui/zeroize/skip.stderr
error: unsupported skip group, expected one of Debug, EqHashOrd, Hash, Zeroize
 --> tests/ui/zeroize/skip.rs:6:48
  |
6 | struct UnsupportedTrait<T>(#[derive_where(skip(Clone))] PhantomData<T>);
  |                                                ^^^^^
